--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".HighscoreActivity" />
-        <activity android:name=".PointsDistributionActivity"></activity>
+        <activity android:name=".PointsDistributionActivity" />
+        <activity android:name=".CountdownActivity"></activity>
     </application>
 
 </manifest>
