Added Settings Activity, cleaned up some Code in GameActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity android:name=".PointsDistributionActivity" />
         <activity android:name=".CountdownActivity" />
         <activity android:name=".GameOverActivity"></activity>
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
     </application>
 
 </manifest>
