--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".GameActivity" />
+        <activity android:name=".GameActivity"
+                  android:configChanges="orientation|screenSize"/>
         <activity android:name=".HighscoreActivity" />
         <activity android:name=".PointsDistributionActivity" />
         <activity android:name=".CountdownActivity" />
