--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.GameActivity" />
+        <activity
+            android:name=".activities.GameActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".activities.HighscoreActivity" />
         <activity android:name=".activities.PointsDistributionActivity" />
         <activity android:name=".activities.CountdownActivity" />
